--- a/BudggyUWP/Budggy/Budggy.csproj
+++ b/BudggyUWP/Budggy/Budggy.csproj
@@ -111,7 +111,9 @@
     <Compile Include="Controller.cs" />
     <Compile Include="Expense.cs" />
     <Compile Include="Income.cs" />
+    <Compile Include="MonthBudget.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Savings.cs" />
     <EmbeddedResource Include="Properties\Budggy.rd.xml" />
   </ItemGroup>
   <ItemGroup>
