--- a/BudggyUWP/Budggy/Budggy.csproj
+++ b/BudggyUWP/Budggy/Budggy.csproj
@@ -112,6 +112,7 @@
     <Compile Include="Expense.cs" />
     <Compile Include="Income.cs" />
     <Compile Include="MonthBudget.cs" />
+    <Compile Include="MySettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Savings.cs" />
     <EmbeddedResource Include="Properties\Budggy.rd.xml" />
