--- a/BudggyUWP/Budggy/Budggy.csproj
+++ b/BudggyUWP/Budggy/Budggy.csproj
@@ -109,11 +109,15 @@
     <Compile Include="Bin.cs" />
     <Compile Include="Budget.cs" />
     <Compile Include="Controller.cs" />
+    <Compile Include="Drawer.cs" />
     <Compile Include="Expense.cs" />
+    <Compile Include="Goal.cs" />
     <Compile Include="Income.cs" />
     <Compile Include="MonthBudget.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RepeatTransaction.cs" />
     <Compile Include="Savings.cs" />
+    <Compile Include="Transaction.cs" />
     <EmbeddedResource Include="Properties\Budggy.rd.xml" />
   </ItemGroup>
   <ItemGroup>
