Did almost nothing.. updated visual studios and broke it lol

--- a/BudggyUWP/BudggyUWP/BudggyUWP.csproj
+++ b/BudggyUWP/BudggyUWP/BudggyUWP.csproj
@@ -120,6 +120,7 @@
       <SubType>Designer</SubType>
     </AppxManifest>
     <None Include="BudggyUWP_TemporaryKey.pfx" />
+    <None Include="BudggyUWP_TemporaryKey.snk" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Properties\Default.rd.xml" />
@@ -182,6 +183,12 @@
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
+  </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>false</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>BudggyUWP_TemporaryKey.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\WindowsXaml\v$(VisualStudioVersion)\Microsoft.Windows.UI.Xaml.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
