I've gotten it to run since I got rid of the Income/ Expense and turn it all into transactions!! That took awhile

--- a/BudggyUWP/Budggy/Budggy.csproj
+++ b/BudggyUWP/Budggy/Budggy.csproj
@@ -112,6 +112,7 @@
     <Compile Include="Drawer.cs" />
     <Compile Include="Expense.cs" />
     <Compile Include="Goal.cs" />
+    <Compile Include="IDGenerator.cs" />
     <Compile Include="Income.cs" />
     <Compile Include="MonthBudget.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
